# shusan_hatsugen_db

./: .gitignore  204-207.xlsx  Dockerfile  README.md  config.py  docker-compose.yml  excel_generator.py  giin_rippou.py  main.py  pyproject.toml  sangiin.py  sangiin_hatsugen.py  sangiin_proto.py  shugiin.py  shugiin_hatsugen.py  shugiin_proto.py  shuisho.py
.devcontainer/: devcontainer.json
prototype/: sangiin_proto.py  shugiin_proto.py
