[tool.poetry]
name = "shusan-hatsugen-db"
version = "0.1.0"
description = ""
authors = ["Tori Takashi <tori.toutoshi@gmail.com>"]
readme = "README.md"
packages = [{include = "shusan_hatsugen_db"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
SQLAlchemy = "1.4.40"
mysqlclient = "^2.1.1"
requests = "^2.28.1"
pathlib = "^1.0.1"
freezegun = "^1.2.2"
vcrpy = "^4.2.1"
pytest-recording = "^0.12.1"
beautifulsoup4 = "^4.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
